tests/snapshots/cli_snapshots__accounts_list_table_snapshot.snap
---
source: tests/cli_snapshots.rs
assertion_line: 203
expression: "run(&[\"accounts\", \"list\"])"
---
╭─────────────────┬───────────────────┬──────────┬───────────────────────┬───────╮
│ id              ┆ name              ┆ balance  ┆ latest_balance_update ┆ live  │
╞═════════════════╪═══════════════════╪══════════╪═══════════════════════╪═══════╡
│ acct_checking   ┆ Daily Checking    ┆ $1234.50 ┆ 1760000000000         ┆ true  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ acct_stale_card ┆ Stale Credit Card ┆ -$987.65 ┆ 1700000000000         ┆ true  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ acct_manual     ┆ Manual Savings    ┆ $250.00  ┆                       ┆ false │
╰─────────────────┴───────────────────┴──────────┴───────────────────────┴───────╯
